updated mat tab to change colors on each tab. Updated layout of content for displaying a load. Added functionality to get back to the loads listted from a load display. Fixed issue with loads listed not wrapping.

--- a/src/main/resources/load/src/app/app.component.css
+++ b/src/main/resources/load/src/app/app.component.css
@@ -5,3 +5,23 @@ max-width: 100%;
 min-height: 100%;
 max-height: 100%;
 }
+
+::ng-deep ::-webkit-scrollbar {
+    width: 15px;
+}
+::ng-deep ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px white;
+    border: 1px solid white; 
+    border-radius: 5px;
+    background:#28A4B9;
+
+}
+::ng-deep ::-webkit-scrollbar-thumb {
+    background: black;
+    border: 1px solid white;
+    border-radius: 10px;
+}
+
+::ng-deep ::-webkit-scrollbar-thumb:hover {
+    background: white; 
+}
