--- a/src/main/resources/load/src/app/components/freight-load-table/freight-load-table.component.css
+++ b/src/main/resources/load/src/app/components/freight-load-table/freight-load-table.component.css
@@ -1,12 +1,14 @@
 .freight-display{
+    position: relative;
     display: flex;
-    width: 100%;
+    width: 10vw;
     height: 90vh;
     /* background-image: linear-gradient( #2eaec5, black); */
     color: white;
     flex-direction: column;
     justify-content: center;
     align-content: center;
+    align-items: center;
 }
 
 .freight-display:hover{
@@ -20,7 +22,6 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 40%;
 }
 
 .freight-title-text{
