--- a/src/main/resources/load/src/app/components/freight-loads-display/freight-loads-display.component.css
+++ b/src/main/resources/load/src/app/components/freight-loads-display/freight-loads-display.component.css
@@ -1,4 +1,3 @@
-
 .search-bar {
     width: 100%;
     height: 5.5%;
@@ -30,12 +29,12 @@
 }
 
 .freight-card-container{
-    width: 10%;
     height: 100%;
     display: flex;
     margin-top: 1%;
     margin-left: 1%;
-    flex-direction: row;
+    margin-right: 1%;
+    flex-direction: column;
     justify-content: center;
     align-content: center;
 }
@@ -47,14 +46,13 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    flex-wrap: wrap;
 }
 
 .freight-container{
     width: 100%;
+    max-width: 100%;
     display: flex;
     justify-content: flex-start;
-    align-content: center;
     flex-direction: row;
     flex-wrap: wrap;
 }
@@ -62,3 +60,4 @@
 .mat-tab-label{
     color: white !important;
 }
+
