--- a/src/main/resources/load/src/app/components/home-page/home-page.component.css
+++ b/src/main/resources/load/src/app/components/home-page/home-page.component.css
@@ -58,7 +58,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    background-image: linear-gradient(5deg,#28a4b9,black);;
+    background-image: linear-gradient(5deg,#28a4b9,black);
     color: white;
     border: 1px solid white;
 }
